# wsmail

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  main.cpp  utils.h
websocketpp/: Doxyfile
websocketpp/docs/: faq.dox  handlers.dox
websocketpp/tutorials/utility_client/: utility_client.md
websocketpp/tutorials/utility_server/: utility_server.md
websocketpp/websocketpp/: connection.hpp  endpoint.hpp  error.hpp
websocketpp/websocketpp/impl/: connection_impl.hpp
websocketpp/websocketpp/roles/: client_endpoint.hpp
websocketpp/websocketpp/transport/asio/: endpoint.hpp
